# carrot-cake

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
carrot-cake/: Cargo.toml
carrot-cake-amqp/: Cargo.toml  README.md
carrot-cake-amqp-pool/: Cargo.toml
carrot-cake-amqp-pool/examples/: setup_channel_pool.rs
carrot-cake-amqp-pool/src/: channel.rs  connection.rs  error.rs  lib.rs  pool.rs
carrot-cake-amqp-pool/tests/: main.rs
carrot-cake-amqp-pool/tests/fixtures/: mod.rs  test_config.yml
carrot-cake-amqp/examples/: publish.rs
carrot-cake-amqp/src/: amqp.rs  configuration.rs  convenience.rs  lib.rs  rabbit_mq.rs  transport.rs
carrot-cake/configuration/: test.yml
carrot-cake/examples/: consumer.rs  publisher.rs
carrot-cake/src/: lib.rs
carrot-cake/src/consumers/: consumer.rs  error.rs  extensions.rs  handler.rs  incoming_message.rs  mod.rs  pre_start_hook.rs  processing_middleware.rs  telemetry_middleware.rs  transient_error_hook.rs
carrot-cake/src/consumers/builders/: consumer_group.rs  consumer_group_configuration.rs  message_handler.rs  mod.rs
carrot-cake/src/consumers/hooks/: mod.rs  transient_error.rs
carrot-cake/src/consumers/hooks/pre_start/: hooks.rs  mod.rs  priority_queue.rs
carrot-cake/src/publishers/: message_envelope.rs  mod.rs  publisher.rs  publisher_middleware.rs
carrot-cake/tests/all/: helpers.rs
carrot-cake/tests/all/consumers/: handlers.rs  hooks.rs  middlewares.rs  mod.rs  processing_middlewares.rs
examples/: consumer.rs  publisher.rs
scripts/: init_rabbitmq.sh
src/: lib.rs
src/amqp/: configuration.rs  convenience.rs  factory.rs  mod.rs
src/consumers/: consumer.rs  handler.rs  incoming_message.rs  mod.rs  pre_start_hook.rs  processing_middleware.rs  telemetry_middleware.rs  transient_error_hook.rs
src/consumers/builders/: consumer_group.rs  consumer_group_configuration.rs  message_handler.rs
src/consumers/hooks/: pre_start.rs
src/pool/: channel.rs  connection.rs  error.rs  mod.rs
src/publishers/: message_envelope.rs  mod.rs  publisher.rs  publisher_middleware.rs
tests/all/: helpers.rs  main.rs
tests/all/consumers/: handlers.rs  hooks.rs  middlewares.rs  mod.rs  processing_middlewares.rs
