[package]
name = "carrot-cake"
version = "0.1.2"
edition = "2021"
description = "An a-peeling pub/sub framework"
repository = "https://github.com/TrueLayer/carrot-cake"
license = "MIT OR Apache-2.0"
keywords = ["amqp", "rabbitmq", "async", "lapin", "pubsub"]
categories = ["network-programming", "web-programming", "asynchronous"]
readme = "README.md"

[dependencies]
amq-protocol-types = "7.0"
anyhow = "1.0"
async-trait = "0.1"
cookie-factory = "0.3"
deadpool = { version = "0.9", default-features = false, features = ["managed"] }
lapin = { version = "2.1", features = ["native-tls"] }
native-tls = "0.2"
redact = { version = "0.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
shutdown-handler = "0.1"
task-local-extensions = { version = "0.1" }
thiserror = "1.0"
tokio-executor-trait = "2.1"
tokio = { version = "1.27", features = ["time", "macros"] }
futures-util = "0.3"
tracing = { version = "0.1", features = ["log", "attributes"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
fake = "2.5"
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.27", features = ["full"] }
