[package]
name = "carrot-cake-amqp-pool"
version = "0.1.0"
edition = "2021"
description = "An a-peeling pub/sub framework"
repository = "https://github.com/TrueLayer/carrot-cake"
license = "MIT OR Apache-2.0"
keywords = ["amqp", "rabbitmq", "async"]
categories = ["database"]
readme = "../README.md"

[dependencies]
carrot-cake-amqp = { version = "0.1", path = "../carrot-cake-amqp" }
deadpool = { version = "0.9", default-features = false, features = ["managed"] }
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
lapin = "2.1"

[dev-dependencies]
serde_yaml = "0.9"
tokio = "1"
