[package]
name = "carrot-cake-amqp"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/TrueLayer/carrot-cake"
license = "MIT OR Apache-2.0"
keywords = ["amqp", "rabbitmq", "async"]
categories = ["database"]
readme = "../README.md"

[dependencies]
lapin = { version = "2.1", features = ["native-tls"] }
tokio-executor-trait = "2.1"
tracing = { version = "0.1", features = ["log", "attributes"] }
anyhow = "1.0"
thiserror = "1.0"
cookie-factory = "0.3"
serde = { version = "1", features = ["derive"] }
native-tls = "0.2"
serde-aux = "4"
tokio = { version = "1.27" }
tracing-error = "0.2"
async-trait = "0.1"

[dev-dependencies]
fake = "2.5"
config = "0.13"
uuid = { version = "1.3", features = ["v4", "serde"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.27", features = ["full"] }
