[package]
name = "carrot-cake"
version = "0.1.0"
edition = "2021"
description = "An a-peeling pub/sub framework"
repository = "https://github.com/TrueLayer/reqwest-middleware"
license = "MIT OR Apache-2.0"
keywords = ["amqp", "rabbitmq", "async"]
categories = ["database"]
readme = "../README.md"

[dependencies]
carrot-cake-amqp = { version = "0.1", path = "../carrot-cake-amqp" }
carrot-cake-amqp-pool = { version = "0.1", path = "../carrot-cake-amqp-pool" }
task-local-extensions = { version = "0.1" }
lapin = "2.1"
tokio = { version = "1.27" }
amq-protocol-types = "7.0"
futures-util = "0.3"
tracing = { version = "0.1", features = ["log", "attributes"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
anyhow = "1.0"
shutdown-handler = "0.1"
